Fri Jul 21 20:35:38 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/win32/wait.h:
	* pace/win32/wait.inl:
	 
	  ACE implements waitpid with an additional argument (HANDLE).
	  Eliminated POSIX support here.

	* pace/docs/PACE_POSIX_support.txt

	  Updated.

Fri Jul 21 20:23:55 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/win32/utsname.inl (pace_uname):
	  
	  Partial emulation made. But more work to be done!

	* pace/docs/PACE_POSIX_support.txt

	  Updated.

Fri Jul 21 19:49:19 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/win32/utime.h (pace_utime):	
	* pace/win32/utime.inl (pace_utime):

	  Implemented the "RIGHT ANSWER[TM]" but it doesn't work so
	  casted away and made the current func work. Left the 
	  correct implementation in the file.

	* pace/docs/PACE_POSIX_support.txt

	  Updated.

Fri Jul 21 19:22:28 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/win32/string.inl:

	  Fixed eror from adding new funcs (retval param was const).

Fri Jul 21 18:43:07 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/win32/unistd.inl:

	  Emulated or removed implementation.

	* pace/docs/PACE_POSIX_support.txt

	  Updated.

Fri Jul 21 18:33:04 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/config/constants.h (PACE_ONE_SECOND_IN_MSECS):

	  Added.

Fri Jul 21 18:19:50 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/config/utility.h:

	  Added PACE_SYSCALL_FAILED 0xFFFFFFFF

Fri Jul 21 12:19:06 2000  Luther J Baker  <luther@cs.wustl.edu>

	* pace/config/utility.h:

	  Typo. ACE_ADAPT_RETVAL ... PACE_ADAPT_RETVAL.

Thu Jul 20 22:58:16 2000  John Heitmann  <jwh1@cs.wustl.edu>

	* pace/stdlib.h
	* pace/posix/stdlib.inl
	  Added atexit, div, labs, ldiv, mblen, mbstowcs, mbtowc
	  strtod, strtol, strtoul, system, wcstombs, wctomb.

	* pace/string.h
	* pace/posix/string.inl
	  Removed const return from strchr, strstr, strrchr, strpbrk.

	*../ace/OS_String.*
	  Paceified.

	*../ace/ThreadManager.cpp
	  Paceified.

	* docs/ACE_Integration.txt