@@ -1,3 +1,11 @@
+Fri Jul 21 20:41:04 2000  Luther J Baker  <luther@cs.wustl.edu>
+
+	* pace/win32/unistd.inl:
+	* pace/posix/unistd.inl:
+	* pace/unistd.h:
+
+	  Typos.
+
 Fri Jul 21 20:35:38 2000  Luther J Baker  <luther@cs.wustl.edu>
 
 	* pace/win32/wait.h:
